# MatrixModelHMC_pytorch

./: .gitignore  README.md  __init__.py  algebra.py  batch.sh  cli.py  config.py  dataAnalysis.ipynb  dataAnalysisHelpers.py  fermions.py  hmc.py  main.py  model.py  models.py  pyproject.toml
MatrixModelHMC_pytorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/tmpN30_pikkt4d_type2_rhmc_g1.0_omega1.0_N30/: metadata.json
models/: 1mm.py  __init__.py  adjoint_det.py  base.py  one_matrix.py  pikkt10d.py  pikkt4d_type1.py  pikkt4d_type2.py  pikkt4d_type2_rhmc.py  utils.py  yang_mills.py  yangmills.py
pIKKT4D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
