[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pIKKT4D"
version = "0.0.0"
description = "Hybrid Monte Carlo drivers for polarized IKKT-like matrix models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "torch"]

[tool.setuptools]
packages = ["pIKKT4D", "pIKKT4D.models"]
package-dir = { pIKKT4D = "." }
