[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MatrixModelHMC_pytorch"
version = "0.0.0"
description = "Hybrid Monte Carlo drivers for polarized IKKT-like matrix models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "torch"]

[tool.setuptools]
packages = ["MatrixModelHMC_pytorch", "MatrixModelHMC_pytorch.models"]
package-dir = { MatrixModelHMC_pytorch = "." }
